<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginAndRegisterActivity"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/l_toolbar"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >



    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_container"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regist_container"
            android:orientation="vertical"
            android:padding="@dimen/default_space"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regist_name"
                android:id="@+id/edit_name"
                android:inputType="text"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_email"
                android:id="@+id/edit_email"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_pass"
                android:id="@+id/edit_pass"
                android:inputType="textPassword"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_v_pass"
                android:id="@+id/edit_v_pass"
                android:inputType="textPassword"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="注册"
                android:backgroundTint="@color/colorGrey"
                android:textColor="@color/colorWhite"
                android:id="@+id/btn_regist"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_container"
            android:orientation="vertical"
            android:padding="@dimen/default_space"
            android:visibility="gone"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_email"
                android:id="@+id/login_email"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_pass"
                android:id="@+id/login_pass"
                android:inputType="textPassword"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="登录"
                android:backgroundTint="@color/colorCP"
                android:textColor="@color/colorWhite"
                android:id="@+id/btn_login"
                />



        </LinearLayout>


    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_text"
        android:text="@string/switch_login"
        android:layout_gravity="end"
        android:textColor="@color/colorCyan"
        android:layout_marginRight="@dimen/default_space"
        />



</LinearLayout>